User selection option.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ epic-duels-server/.settings/org.eclipse.jdt.core.prefs
 epic-duels-server/.settings/org.eclipse.m2e.core.prefs
 epic-duels-messages/.settings/org.eclipse.jdt.core.prefs
 epic-duels-messages/.settings/org.eclipse.m2e.core.prefs
+epic-duels-client/config/users.txt
+epic-duels-client/output.log
