--- a/epic-duels-client/pom.xml
+++ b/epic-duels-client/pom.xml
@@ -23,6 +23,11 @@
         	<artifactId>epic-duels-messages</artifactId>
         	<version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+        	<groupId>org.apache.logging.log4j</groupId>
+        	<artifactId>log4j-core</artifactId>
+        	<version>2.11.0</version>
+        </dependency>
     </dependencies>
     <properties>
 		<!-- maven-compiler-plugin , aka JAVA Compiler 1.8 -->
